feat: Adding animations to the UI